--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Building a stock database using Polygon and Sharadar\n",
+    "# Building a stock database using Polygon\n",
     "*Python 3.11.4*\n",
     "\n",
-    "The goal is to create a financial database of 1-minute OHLCV data, fundamentals and alternative data from 2004 and beyond, delisted or listed, for common stocks and ADR common stocks. I use Polygon for price data, which is \"ticker-centric\". All data from Polygon is point-in-time by ticker. This means we have to take care of renamings ourselves. Some vendors already do renamings (e.g. Tiingo). And almost all of the vendors that do renamings have a small bit of survivorship-bias, because when a ticker is re-used they do not have them.\n",
+    "The goal is to create a financial database of 1-minute OHLCV data from 2004 and beyond, delisted or listed, for common stocks and ADR common stocks. I use Polygon for price data, which is \"ticker-centric\". All data from Polygon is point-in-time by ticker. This means we have to take care of renamings ourselves. Some vendors already do renamings (e.g. Tiingo). And almost all of the vendors that do renamings have a small bit of survivorship-bias, because when a ticker is re-used they do not have them.\n",
     "\n",
     "With a previous project I tried to convert tick quote data to quotes and then merge them with bars to get a realistic bid-ask spread. I have decided to not use quote data anymore. It is simply too expensive, cumbersome or simply impossible. I would have to download ALL tick data in order to get quotebars. Instead, I will just trade using 1-minute OHLC. When backtesting, I will assume a spread of 1 tick or a few cents. This is okay, because I simply will not trade HFT or systems with an average profit less than 0.3% for liquid stocks or less than 0.1% for liquid futures/CFDs. High frequency systems also won't work in Europe due to almost not having access to PFOF brokers. I also will avoid illiquid stocks. If I want a more realistic estimate, I will sample the bid-ask spread throughout the day. \n",
     "\n",
@@ -38,7 +38,9 @@
     "│   │   ├── secret.txt\n",
     "```\n",
     "\n",
-    "The <code>market</code> folder will contain the market hours. All data will be stored in the corresponding directory based on the data vendor. Polygon is for stock/fundamental data. Stockanalysis is for stock renamings and Sharadar is for fundamentals. Raw data is never adjusted. When updating raw data, we should be able to just append it. Processed data is always adjusted which means it is usable by the backtester. The backtester should only use what is in the <code>processed</code> folders. The <code>secret.txt</code> files contain the API keys. All folders have to be created manually. \n",
+    "The <code>market</code> folder will contain the market hours. All data will be stored in the corresponding directory based on the data vendor. Polygon is for stock/fundamental data. Stockanalysis is for stock renamings and Sharadar is for fundamentals.  Raw data is never adjusted. When updating raw data, we should be able to just append it. Processed data is always adjusted which means it is usable by the backtester. The backtester should only use what is in the <code>processed</code> folders. The <code>secret.txt</code> files contain the API keys. All folders have to be created manually. \n",
+    "\n",
+    "(*Fundamentals are something on the to do list. It will be a while before I implement that. However you can already take a look at <code>x_get_fundamentals.ipynb</code>.*)\n",
     "\n",
     "Because the rate limit for the free Polygon plan is quite low, you need at least the starter subscription (29 USD/month). They actually have a 20% discount for students.\n",
     "\n",
