--- a/06_download_bars.ipynb
+++ b/06_download_bars.ipynb
@@ -139,25 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updating BFRI-2021-10-29\n",
-      "Updating BFS-2019-01-01\n",
-      "Updating BFST-2019-01-01\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tickers = get_tickers(v=3)\n",
     "tickers = tickers[tickers[\"type\"].isin([\"CS\", \"ADRC\", \"ETF\", \"ETN\", \"ETV\"])]\n",
     "tickers.reset_index(inplace=True, drop=True)\n",
     "counter = 0\n",
     "for index, row in tickers.iterrows():\n",
+    "    if index < 1600:\n",
+    "        continue\n",
     "    id = row[\"ID\"]\n",
     "    ticker = row[\"ticker\"]\n",
     "    start_date = row[\"start_date\"]\n",
@@ -166,8 +158,12 @@
     "    if id in old_IDs and end_date > old_end_date:\n",
     "        update = download_m1_raw_data(ticker = ticker, from_ = old_end_date + timedelta(days=1), to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], path = None, client=client)\n",
     "        if update is not None:\n",
-    "            write(DATA_PATH + f\"raw/m1/{id}.parquet\", update, append=True)\n",
-    "            print(f'Updating {id}')\n",
+    "            try:\n",
+    "                write(DATA_PATH + f\"raw/m1/{id}.parquet\", update, append=True)\n",
+    "                print(f'Updating {id}')\n",
+    "            except Exception:\n",
+    "                download_m1_raw_data(ticker = ticker, from_ = row[\"start_date\"], to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], path = DATA_PATH + f\"raw/m1/{id}.parquet\", client=client)\n",
+    "                print(f'Downloading {id}')\n",
     "\n",
     "    elif id not in old_IDs:\n",
     "        download_m1_raw_data(ticker = ticker, from_ = row[\"start_date\"], to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], path = DATA_PATH + f\"raw/m1/{id}.parquet\", client=client)\n",
