--- a/09_renamings.ipynb
+++ b/09_renamings.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Merging ticker changes\n",
+    "# 9.1 Merging ticker changes\n",
     "In section 1.7 we have acquired the list of renamings. Now we will use them to merge our data. We have to be aware that it is possible for a ticker to used multiple times, so the <code>ticker_changes.csv</code> may contain multiple of the same tickers in the 'from' and 'to' column. \n",
     "\n",
     "After processing the ticker changes we will create a <code>tickers_v5.csv</code> which will be our definitive ticker list. This contains a column 'tickers_old', which will containa list of (date_of_change, ticker) pairs. So if A changes to B on day 2, and B changes to C on day 5, tickers_old for D will contain [[2, A], [5, B]].\n",
@@ -382,8 +382,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Updates\n",
-    "Not implemented. However, we should only process the tickers that had renamings in the update period."
+    "# 9.2 Updates\n",
+    "Rerun the file after setting END_DATE and updating the list of renamings."
    ]
   },
   {
