--- a/10_aggregate.ipynb
+++ b/10_aggregate.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Getting higher timeframe bars\n",
+    "# 10.1 Getting higher timeframe bars\n",
     "I am interested in the 5-minute and 1-day timeframes."
    ]
   },
@@ -126,8 +126,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Updates\n",
-    "Not implemented. However, we should only process the new data and then append."
+    "# 10.2 Updates\n",
+    "Rerun after updating END_DATE."
    ]
   },
   {
