--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -5,9 +5,11 @@
    "metadata": {},
    "source": [
     "# Building a stock database using Polygon\n",
-    "*Python 3.11.4*\n",
+    "*Requirements: Python 3.11.4, a Polygon.io and a stockanalysis.com subscription*\n",
     "\n",
     "The goal is to create a financial database of 1-minute OHLCV data from 2004 and beyond, delisted or listed, for common stocks and ADR common stocks. I use Polygon for price data, which is \"ticker-centric\". All data from Polygon is point-in-time by ticker. This means we have to take care of renamings ourselves. Some vendors already do renamings (e.g. Tiingo). And almost all of the vendors that do renamings have a small bit of survivorship-bias, because when a ticker is re-used they do not have them.\n",
+    "\n",
+    "I will also make sure that it is easy to update without redownloading everything. However it is *not* optimized to update daily. I only intend to update monthly. My backtesting and live trading framework will be different. E.g. for a trading system that trades daily bars, I will only download the required daily bars every day and not update the entire database for all tickers. For a day-trading system I will use screeners, which also do not require downloading all 6000+ stocks. In fact it would be very hard to constantly stream 6000+ stocks at the same time, if not impossible.\n",
     "\n",
     "With a previous project I tried to convert tick quote data to quotes and then merge them with bars to get a realistic bid-ask spread. I have decided to not use quote data anymore. It is simply too expensive, cumbersome or simply impossible. I would have to download ALL tick data in order to get quotebars. Instead, I will just trade using 1-minute OHLC. When backtesting, I will assume a spread of 1 tick or a few cents. This is okay, because I simply will not trade HFT or systems with an average profit less than 0.3% for liquid stocks or less than 0.1% for liquid futures/CFDs. High frequency systems also won't work in Europe due to almost not having access to PFOF brokers. I also will avoid illiquid stocks. If I want a more realistic estimate, I will sample the bid-ask spread throughout the day. \n",
     "\n",
@@ -38,19 +40,19 @@
     "│   │   ├── secret.txt\n",
     "```\n",
     "\n",
-    "The <code>market</code> folder will contain the market hours. All data will be stored in the corresponding directory based on the data vendor. Polygon is for stock/fundamental data. Stockanalysis is for stock renamings and Sharadar is for fundamentals.  Raw data is never adjusted. When updating raw data, we should be able to just append it. Processed data is always adjusted which means it is usable by the backtester. The backtester should only use what is in the <code>processed</code> folders. The <code>secret.txt</code> files contain the API keys. All folders have to be created manually. \n",
+    "The <code>market</code> folder will contain the market hours. All data will be stored in the corresponding directory based on the data vendor. Polygon is for stock/fundamental data. Stockanalysis is for stock renamings and Sharadar is for fundamentals*.  Raw data is never adjusted. When updating raw data, we should be able to just append it. Processed data is always adjusted which means it is usable by the backtester. The backtester should only use what is in the <code>processed</code> folders. The <code>secret.txt</code> files contain the API keys. All folders have to be created manually. \n",
     "\n",
-    "(*Fundamentals are something on the to do list. It will be a while before I implement that. However you can already take a look at <code>x_get_fundamentals.ipynb</code>.*)\n",
+    "*\\*Fundamentals are something on the to do list. It will be a while before I implement that. However you can already take a look at <code>x_get_fundamentals.ipynb</code>.*\n",
     "\n",
     "Because the rate limit for the free Polygon plan is quite low, you need at least the starter subscription (29 USD/month). They actually have a 20% discount for students.\n",
     "\n",
-    "The most important file is <code>tickers_v{version}.csv</code> which resides in the <code>data</code> folder. This is a csv containing all tickers. This is the while which you have to loop through when filtering/backtesting. It is not an easy task to build the ticker lists. Or even handle to all other problems such as renamings, delistings, early closes, dividends and splits. I have spent quite some time on this. You *cannot* just loop through the most recent ticker list that Polygon provides.\n",
+    "The most important file is <code>tickers_v{version}.csv</code> which resides in the <code>data</code> folder. This is a csv containing all tickers. This is the file which you have to loop through when filtering/backtesting. It is not an easy task to build the ticker lists. Or even handle to all other problems such as renamings, delistings, early closes, dividends and splits. I have spent quite some time on this. You *cannot* just loop through the most recent ticker list that Polygon provides.\n",
     "\n",
     "The series of notebooks:\n",
     "1. An introduction to the problems with the Polygon ticker list. There are many.\n",
-    "2. Get market hours. [U]\n",
+    "2. Get market hours.\n",
     "3. Solve the ticker problems to create a correct list of tickers.\n",
-    "4. Add ETPs. *(optional)*\n",
+    "4. Add ETPs.\n",
     "5. Download adjustments.\n",
     "6. Download raw prices.\n",
     "7. Data cleaning. **Postponed**\n",
@@ -60,15 +62,7 @@
     "11. Some extra handy functions.\n",
     "12. Using the data in practice.\n",
     "\n",
-    "<!-- 2. Get adjustment factors.\n",
-    "3. Download raw 1-minute OHLC data. After converting the Unix timestamp to ET-naive datetimes, the columns are <code>[\"datetime\", \"open\", \"high\", \"low\", \"close\", \"volume\"]</code>.\n",
-    "4. Clean suspicious bars with quote/tick data. All cleaned bars are stored in the folder <code>cleaned</code>. **(Postponed because I currently cannot afford the tick data subscription)**\n",
-    "5. Process raw data. When data is downloaded for the first time or updated, the *entire* data set needs be processed (for the updated tickers). This is because if new adjustments come in due to dividend or split data, the entire history needs to be readjusted. Processed data will contain the columns <code>[\"open\", \"high\", \"low\", \"close\", \"close_original\", \"volume\", \"tradeable\", \"cleaned\", \"halted\"]</code>. All prices are adjusted, except <code>close_original</code>. The reason we need the original close price is for price filters and fundamentals. Processed data should have no gaps. If data is forward filled, the backtester should not trade these 'stale' prices. Either there have been no trades in the minute or the stock is halted. That is what the <code>tradeable</code> and <code>halted</code> flag is for. The <code>cleaned</code> flag is for if the bar has been cleaned.\n",
-    "6. Process ticker changes.\n",
-    "7. Aggregate processed 1-minute bars to higher timeframes.\n",
-    "8. Get fundamentals from Polygon and Sharadar. **(Postponed)** -->\n",
-    "\n",
-    "*Note: a data point at 15:59 with OHLC means that the open was at 15:59:00 and close at 16:00:00. So daily data does not contain the 16:00:00 minute bar. My polygon key is in <code>../../../data/polygon/secret.txt</code>, this file has to be created manually, just like the folders.*"
+    "*Note: a data point at 15:59 with OHLC means that the open was at 15:59:00 and close at 16:00:00.*"
    ]
   },
   {
