--- a/02_market_hours.ipynb
+++ b/02_market_hours.ipynb
@@ -241,20 +241,18 @@
     "    else:\n",
     "        raise Exception(\"No datetime object specified.\")\n",
     "\n",
-    "def download_m1_raw_data(ticker, from_, to, path, client, to_parquet=False, columns=['open', 'high', 'low', 'close', 'volume']):\n",
-    "    \"\"\"Downloads raw 1-minute data from Polygon, converts to ET-naive time and store to either a csv file or Parquet file. Includes extended hours.\n",
+    "def download_m1_raw_data(ticker, from_, to, client, columns=['open', 'high', 'low', 'close', 'volume']):\n",
+    "    \"\"\"Downloads raw 1-minute data from Polygon and converts to ET-time\n",
     "\n",
     "    Args:\n",
     "        ticker (str): _description_\n",
     "        from_ (date/datetime): the starting date(time)\n",
     "        to (date/datetime): end ending date(time)\n",
-    "        path (str): where to store the result. If None is specified, the function returns the df instead.\n",
     "        client (RESTClient): the client object\n",
-    "        to_parquet (bool, optional): whether to store in Parquet files. Defaults to csv.\n",
     "        columns (list): list of column names to keep\n",
     "\n",
     "    Returns:\n",
-    "        DataFrame: the data\n",
+    "        DataFrame: the result\n",
     "    \"\"\"\n",
     "    \n",
     "    # If no time specified, fill in the start of premarket/end of postmarket\n",
@@ -266,18 +264,24 @@
     "        end_unix = datetime_to_unix(to)\n",
     "    else:\n",
     "        raise Exception(\"No datetime or date object specified.\")\n",
-    "\n",
-    "    m1 = pd.DataFrame(\n",
-    "        client.list_aggs(\n",
-    "            ticker=ticker,\n",
-    "            multiplier=1,\n",
-    "            timespan=\"minute\",\n",
-    "            from_=start_unix,\n",
-    "            to=end_unix,\n",
-    "            limit=50000,\n",
-    "            adjusted=False,\n",
+    "    \n",
+    "    try:\n",
+    "        m1 = pd.DataFrame(\n",
+    "            client.list_aggs(\n",
+    "                ticker=ticker,\n",
+    "                multiplier=1,\n",
+    "                timespan=\"minute\",\n",
+    "                from_=start_unix,\n",
+    "                to=end_unix,\n",
+    "                limit=50000,\n",
+    "                adjusted=False,\n",
+    "            )\n",
     "        )\n",
-    "    )\n",
+    "    except Exception as e:\n",
+    "        print(ticker)\n",
+    "        print(e)\n",
+    "        return\n",
+    "\n",
     "    if not m1.empty:\n",
     "        m1[\"timestamp\"] = pd.to_datetime(\n",
     "            m1[\"timestamp\"], unit=\"ms\"\n",
@@ -291,13 +295,8 @@
     "        m1.set_index(\"datetime\", inplace=True)\n",
     "        m1 = m1[columns]\n",
     "\n",
-    "        if path is None:\n",
-    "            return m1\n",
+    "        return m1\n",
     "\n",
-    "        if to_parquet:\n",
-    "            m1.to_parquet(path, engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)\n",
-    "        else:\n",
-    "            m1.to_csv(path)\n",
     "    else:\n",
     "        print(\n",
     "            f\"There is no data for {ticker} from {from_.isoformat()} to {to.isoformat()}\"\n",
@@ -476,8 +475,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_m1_raw_data(\"SPY\", from_ = date(2019, 1, 2), to = date(2023, 8, 18), \n",
-    "path = POLYGON_DATA_PATH + \"../market/SPY.csv\", client=client)"
+    "data = download_m1_raw_data(\"SPY\", from_ = date(2019, 1, 2), to = date(2023, 8, 18), client=client)\n",
+    "data.to_parquet(POLYGON_DATA_PATH + \"../market/SPY.csv\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)"
    ]
   },
   {
