--- a/06_download_bars.ipynb
+++ b/06_download_bars.ipynb
@@ -61,15 +61,13 @@
     "downloaded_days = timedelta(0)\n",
     "\n",
     "for index, row in tickers.iterrows():\n",
-    "    if index < 4385:\n",
-    "        continue\n",
-    "\n",
     "    id = row[\"ID\"]\n",
     "    ticker = row[\"ticker\"]\n",
     "    start_date = row[\"start_date\"]\n",
     "    end_date = row[\"end_date\"]\n",
     "\n",
-    "    download_m1_raw_data(ticker = ticker, from_ = start_date, to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], path = DATA_PATH + f\"raw/m1/{id}.parquet\", client=client, to_parquet=True)\n",
+    "    m1 = download_m1_raw_data(ticker = ticker, from_ = start_date, to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], client=client)\n",
+    "    m1.to_parquet(DATA_PATH + f\"raw/m1/{id}.parquet\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)\n",
     "\n",
     "    # For timing (becomes accurate after 5.0%)\n",
     "    passed_time = datetime.now() - start_time\n",
@@ -114,7 +112,7 @@
    "metadata": {},
    "source": [
     "# 6.2 Updates\n",
-    "Run the first cell to import the modules and then run the cells below.\n",
+    "Run the first cell to import the modules and then run the cells below. Making a backup of the <code>raw/m1</code> folder is recommended! If something goes wrong in this step, you cannot go back without downloading everything again. \n",
     "\n",
     "Loop through tickers_v3:\n",
     "- If the ID is in <code>tickers_v3_old</code> and <code>end_date</code> is larger than the old end date, then we can simply append the raw data.\n",
@@ -139,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +160,8 @@
     "                write(DATA_PATH + f\"raw/m1/{id}.parquet\", update, append=True)\n",
     "                print(f'Updating {id}')\n",
     "            except Exception:\n",
-    "                download_m1_raw_data(ticker = ticker, from_ = row[\"start_date\"], to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], path = DATA_PATH + f\"raw/m1/{id}.parquet\", client=client)\n",
+    "                m1 = download_m1_raw_data(ticker = ticker, from_ = row[\"start_date\"], to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], client=client)\n",
+    "                m1.to_parquet(DATA_PATH + f\"raw/m1/{id}.parquet\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)\n",
     "                print(f'Downloading {id}')\n",
     "\n",
     "    elif id not in old_IDs:\n",
