--- a/12_screeners.ipynb
+++ b/12_screeners.ipynb
@@ -1,11 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -28,7 +23,7 @@
    "metadata": {},
    "source": [
     "# 1. Simulating screeners\n",
-    "In backtesting, we should be able to simulate what a screener would have given, else we would have to simulate all stocks simultaneously. Because this is a computationally expensive thing to do, the results are saved in the <code>processed/cache/</code> folder. For the short-term (<1d), simulated scans should match real scans. I will use the IBKR TWS scanner to determine what is possible. The screen can be combined (just like with real screens). "
+    "In backtesting, we should be able to simulate what a screener would have given, else we would have to simulate all stocks simultaneously. Because this is a computationally expensive thing to do, the results are saved in the <code>processed/cache/</code> folder. There are of course some constraints to this. It should be technically possible to get the results from screeners, either online or via APIs (e.g. IBKR TWS). This means that intraday scanners are limited. For long-term screeners it does not matter because we can actually download everything after the end of the trading day."
    ]
   },
   {
@@ -117,29 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Top losers %"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pre-market liquid (premarket open to 9:25)\n",
-    "# Uses m5 data\n",
-    "# DataFrame with lists"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Intraday P30 in 15-minutes with constraints\n",
-    "# Uses m1 data\n",
-    "# DataFrame with lists"
+    "# Top gainers %"
    ]
   },
   {
@@ -159,26 +132,6 @@
     "I also want to look at the impact of taxes (36%) and inflation.\n",
     "\n",
     "Note: I would not use the SPY for trading indices, because futures are more liquid. Even index CFDs may have lower trading costs. Also, I can only access US-domiciled ETFs from a very small amount of brokers due to stupid EU regulations."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "My focus will be on:\n",
-    "* Single or low-asset strategies for e.g. SPY/VXX. The actual execution may not be in the ETF but in a more liquid futures.\n",
-    "* Screenable strategies, e.g. S3 or Gap-up short. These use the top % winners and losers. At most the backtester has to keep track of 5-10 stocks at the same time. These may use fundamentals which I will implement later.\n",
-    "* All systems have a expected holding time of at least 1 hour.\n",
-    "* As such, I do not need tick data for signal generation. However I want it to simulate realistic fills and to clean data.\n",
-    "\n",
-    "I care less about:\n",
-    "* Mostly fundamental strategies\n",
-    "* Scalping: only feasible for US-based PFOF brokers. Scalping could use lower resolution bars (15s) but always use ticks to simulate fills. My backtester should always be able to handle fixed-time-interval bars."
    ]
   },
   {
