--- a/06_fastparquet.ipynb
+++ b/06_fastparquet.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Working with Parquet files\n",
+    "*TO DO: more research between pyarrow and fastparquet. I notice that pyarrow + brotli is infinitely faster than fastparquet for writing and takes much less space. The disadvantage is not being able to append.*\n",
+    "\n",
     "Since we will be working with close to 10000 parquet files we need to make sure that we can read it fast. \n",
     "\n",
     "With the default settings, it is not possible to partially read a Parquet file. This is bad, because most of the time we only need a small subsection of the data.\n",
@@ -16,24 +18,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import get_tickers\n",
+    "from utils import get_tickers, download_m1_raw_data\n",
     "from datetime import date\n",
+    "from polygon.rest import RESTClient\n",
     "import pandas as pd\n",
+    "import os\n",
     "import pyarrow.parquet as pq\n",
-    "DATA_PATH = \"../data/polygon/\""
+    "\n",
+    "DATA_PATH = \"../data/polygon/\"\n",
+    "\n",
+    "with open(DATA_PATH + \"secret.txt\") as f:\n",
+    "    KEY = next(f).strip()\n",
+    "\n",
+    "client = RESTClient(api_key=KEY)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "tickers = get_tickers(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bars = pd.read_parquet(DATA_PATH + f\"raw/m1/AACG-2019-10-17.parquet\")"
    ]
   },
   {
