fixed some things

--- a/03_tickers.ipynb
+++ b/03_tickers.ipynb
@@ -4886,9 +4886,7 @@
     "1. Update END_DATE.\n",
     "2. Run the 3 ### cells in 3.1. This updates the folder of ticker lists. It takes around 7 seconds per day.\n",
     "3. Run the cell below to update <code>tickers_v1</code>. Instead of merging all ticker lists, only the new ones are merged.\n",
-    "4. Run the cells with ### in 3.5 and 3.6 to update <code>tickers_v2</code>. We skip checking if a stock is a common stock is not because it is very time consuming. If you do not want to skip it, run the two '### (OPTIONAL)' rows.\n",
-    "\n",
-    "Because this is tedious, I will create a script to do updates for everything when I have finished the series."
+    "4. Run the cells with ### in 3.5 and 3.6 to update <code>tickers_v2</code>. We skip checking if a stock is a common stock is not because it is very time consuming. Instead we remove what we had already removed. If you do not want to skip it, run the two '### (OPTIONAL)' rows. However most incorrect classifications were in 2019."
    ]
   },
   {
