--- a/08_process.ipynb
+++ b/08_process.ipynb
@@ -1494,9 +1494,6 @@
    "source": [
     "all_files = os.listdir(f'{DATA_PATH}raw/m1/')\n",
     "for index, file in enumerate(all_files):\n",
-    "    # TO DELETE\n",
-    "    if index < 4245:\n",
-    "        continue\n",
     "    ticker = file[:-19] # Remove date and parquet extension\n",
     "\n",
     "    bars = pd.read_parquet(f\"{DATA_PATH}raw/m1/{file}\")\n",
@@ -1529,6 +1526,9 @@
     "    all_adjusted_bars['volume'] = all_adjusted_bars['volume'].astype(int)\n",
     "    \n",
     "    all_adjusted.to_parquet(DATA_PATH + f\"processed/m1/{file}\", engine=\"fastparquet\", row_group_offsets=25000)\n",
+    "\n",
+    "    # Saves 40% of space, but takes longer\n",
+    "    #all_adjusted.to_parquet(DATA_PATH + f\"processed/m1 (pyarrow brotli)/{file}\", engine=\"pyarrow\", compression=\"brotli\", row_group_size=25000)\n",
     "    \n",
     "    print(ticker)"
    ]
@@ -1572,15 +1572,14 @@
     "    id = file[:-8] # Remove parquet extension\n",
     "\n",
     "    dataset = pq.ParquetFile(DATA_PATH + f\"processed/m1/{file}\")\n",
+    "\n",
     "    # Read metadata (statistics) of first and last row group. This avoids reading the entire file.\n",
     "    # Reading everything from the datetime column and getting first/last row took 8 minutes. This took less than 50 sec.\n",
     "    metadata_first_row_group = dataset.metadata.row_group(0)\n",
     "    metadata_last_row_group = dataset.metadata.row_group(dataset.num_row_groups-1)\n",
-    "    \n",
     "    # Retrieve statistics\n",
     "    min_date = metadata_first_row_group.column(0).statistics.min\n",
     "    max_date = metadata_last_row_group.column(0).statistics.max\n",
-    "\n",
     "    # Convert to date\n",
     "    start_data = min_date.to_pydatetime().date()\n",
     "    end_data = max_date.to_pydatetime().date()\n",
@@ -1699,7 +1698,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some stocks have zero data. These are that exists only a few days in the Polygon ticker lists. We can safely remove those."
+    "Some stocks have zero data. There are the tickers with only ghost days. We can safely remove those."
    ]
   },
   {
