--- a/09_renamings.ipynb
+++ b/09_renamings.ipynb
@@ -26,18 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import get_tickers, get_market_dates, get_ticker_changes, get_market_hours\n",
+    "from utils import get_tickers, get_market_dates, get_ticker_changes, get_market_calendar\n",
     "from datetime import datetime, date, time\n",
     "import mplfinance as mpf\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "DATA_PATH = \"../../../data/polygon/\"\n",
-    "END_DATE = date(2023, 9, 1)"
+    "DATA_PATH = \"../data/polygon/\"\n",
+    "END_DATE = date(2023, 9, 7)"
    ]
   },
   {
@@ -112,7 +112,7 @@
     "            dividend = adjustments[adjustments.type == 'DIV']\n",
     "            if len(dividend) > 0:\n",
     "                print(ticker_to)\n",
-    "                market_hours = get_market_hours()\n",
+    "                market_hours = get_market_calendar()\n",
     "                market_hours = market_hours[['regular_close']]\n",
     "\n",
     "                cum_div_date = end_data_from\n",
@@ -141,7 +141,8 @@
     "            adjustments = adjustments[(adjustments.index == start_data_to)]\n",
     "            assert len(adjustments) == 0\n",
     "\n",
-    "        pd.concat([from_, to]).to_parquet(DATA_PATH + f\"processed/m1/{new_id}.parquet\", engine=\"pyarrow\", compression = 'brotli')\n",
+    "        pd.concat([from_, to]).to_parquet(DATA_PATH + f\"processed/m1/{new_id}.parquet\", engine=\"fastparquet\", row_group_offsets=25000)\n",
+    "        # pd.concat([from_, to]).to_parquet(DATA_PATH + f\"processed/m1/{new_id}.parquet\", engine=\"pyarrow\", compression = 'brotli', row_group_size = 25000)\n",
     "\n",
     "        # Delete old ticker from ticker list. You can also remove the files, but that is not necessary. In backtesting you will always loop over the ticker list and not over de files in the folder.\n",
     "        # os.remove(path = DATA_PATH + f\"processed/m1/{id_from}.parquet\") # Removal of old renamed ticker (not necessary)\n",
@@ -156,19 +157,19 @@
     "    if index_from >= (len(tickers_v4)-1):\n",
     "        break\n",
     "\n",
-    "tickers_v4.to_csv(\"../../../data/tickers_v5.csv\")"
+    "tickers_v4.to_csv(\"../data/tickers_v5.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "550\n"
+      "747\n"
      ]
     },
     {
@@ -208,16 +209,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3976</th>\n",
+       "      <th>4319</th>\n",
        "      <td>META-2019-01-01</td>\n",
        "      <td>META</td>\n",
        "      <td>[['2022-06-09', 'FB']]</td>\n",
        "      <td>Meta Platforms, Inc. Class A Common Stock</td>\n",
        "      <td>True</td>\n",
        "      <td>2019-01-01</td>\n",
-       "      <td>2023-09-01</td>\n",
+       "      <td>2023-09-07</td>\n",
        "      <td>2019-01-02</td>\n",
-       "      <td>2023-09-01</td>\n",
+       "      <td>2023-09-07</td>\n",
        "      <td>CS</td>\n",
        "      <td>1326801.0</td>\n",
        "      <td>BBG000MM2P62</td>\n",
@@ -228,16 +229,16 @@
       ],
       "text/plain": [
        "                   ID ticker             tickers_old  \\\n",
-       "3976  META-2019-01-01   META  [['2022-06-09', 'FB']]   \n",
+       "4319  META-2019-01-01   META  [['2022-06-09', 'FB']]   \n",
        "\n",
        "                                           name  active  start_date  \\\n",
-       "3976  Meta Platforms, Inc. Class A Common Stock    True  2019-01-01   \n",
+       "4319  Meta Platforms, Inc. Class A Common Stock    True  2019-01-01   \n",
        "\n",
        "        end_date  start_data    end_data type        cik composite_figi  \n",
-       "3976  2023-09-01  2019-01-02  2023-09-01   CS  1326801.0   BBG000MM2P62  "
+       "4319  2023-09-07  2019-01-02  2023-09-07   CS  1326801.0   BBG000MM2P62  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,14 +259,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "10\n"
      ]
     },
     {
@@ -305,33 +306,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2162</th>\n",
+       "      <th>2363</th>\n",
        "      <td>ERNA-2019-01-01</td>\n",
        "      <td>ERNA</td>\n",
        "      <td>[['2022-10-17', 'BTX'], ['2021-03-26', 'NTN']]</td>\n",
        "      <td>Eterna Therapeutics Inc. Common Stock</td>\n",
        "      <td>True</td>\n",
        "      <td>2019-01-01</td>\n",
-       "      <td>2023-09-01</td>\n",
+       "      <td>2023-09-07</td>\n",
        "      <td>2019-01-02</td>\n",
-       "      <td>2023-09-01</td>\n",
+       "      <td>2023-09-07</td>\n",
        "      <td>CS</td>\n",
        "      <td>748592.0</td>\n",
        "      <td>BBG000CX5677</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3448</th>\n",
-       "      <td>JXJT-2019-01-01</td>\n",
-       "      <td>JXJT</td>\n",
-       "      <td>[['2022-10-10', 'LLL'], ['2021-10-13', 'KBSF']]</td>\n",
-       "      <td>JX Luxventure Limited Common Stock</td>\n",
+       "      <th>2691</th>\n",
+       "      <td>FRGT-2019-01-01</td>\n",
+       "      <td>FRGT</td>\n",
+       "      <td>[['2022-05-27', 'HUSN'], ['2020-05-08', 'CIFS']]</td>\n",
+       "      <td>Freight Technologies, Inc. Ordinary Shares</td>\n",
        "      <td>True</td>\n",
        "      <td>2019-01-01</td>\n",
-       "      <td>2023-09-01</td>\n",
+       "      <td>2023-09-07</td>\n",
        "      <td>2019-01-02</td>\n",
-       "      <td>2023-09-01</td>\n",
+       "      <td>2023-09-07</td>\n",
        "      <td>CS</td>\n",
-       "      <td>1546383.0</td>\n",
+       "      <td>1687542.0</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -339,20 +340,24 @@
        "</div>"
       ],
       "text/plain": [
-       "                   ID ticker                                      tickers_old  \\\n",
-       "2162  ERNA-2019-01-01   ERNA   [['2022-10-17', 'BTX'], ['2021-03-26', 'NTN']]   \n",
-       "3448  JXJT-2019-01-01   JXJT  [['2022-10-10', 'LLL'], ['2021-10-13', 'KBSF']]   \n",
+       "                   ID ticker  \\\n",
+       "2363  ERNA-2019-01-01   ERNA   \n",
+       "2691  FRGT-2019-01-01   FRGT   \n",
        "\n",
-       "                                       name  active  start_date    end_date  \\\n",
-       "2162  Eterna Therapeutics Inc. Common Stock    True  2019-01-01  2023-09-01   \n",
-       "3448     JX Luxventure Limited Common Stock    True  2019-01-01  2023-09-01   \n",
+       "                                           tickers_old  \\\n",
+       "2363    [['2022-10-17', 'BTX'], ['2021-03-26', 'NTN']]   \n",
+       "2691  [['2022-05-27', 'HUSN'], ['2020-05-08', 'CIFS']]   \n",
        "\n",
-       "      start_data    end_data type        cik composite_figi  \n",
-       "2162  2019-01-02  2023-09-01   CS   748592.0   BBG000CX5677  \n",
-       "3448  2019-01-02  2023-09-01   CS  1546383.0                 "
+       "                                            name  active  start_date  \\\n",
+       "2363       Eterna Therapeutics Inc. Common Stock    True  2019-01-01   \n",
+       "2691  Freight Technologies, Inc. Ordinary Shares    True  2019-01-01   \n",
+       "\n",
+       "        end_date  start_data    end_data type        cik composite_figi  \n",
+       "2363  2023-09-07  2019-01-02  2023-09-07   CS   748592.0   BBG000CX5677  \n",
+       "2691  2023-09-07  2019-01-02  2023-09-07   CS  1687542.0                 "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
