--- a/11_extra_functions.ipynb
+++ b/11_extra_functions.ipynb
@@ -21,7 +21,7 @@
     "import os\n",
     "import pyarrow as pa\n",
     "import pyarrow.parquet as pq\n",
-    "DATA_PATH = \"../../../data/polygon/\""
+    "DATA_PATH = \"../data/polygon/\""
    ]
   },
   {
