--- a/10_aggregate.ipynb
+++ b/10_aggregate.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "DATA_PATH = \"../../../data/polygon/\""
+    "DATA_PATH = \"../data/polygon/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,21 +47,23 @@
     "    m5 = m5.dropna()\n",
     "    m5['tradeable'] = m5['tradeable'].astype('bool')\n",
     "    m5['halted'] = m5['halted'].astype('bool')      \n",
-    "    m5.to_parquet(DATA_PATH + f\"processed/m5/{file}\", engine=\"pyarrow\", compression = 'brotli')\n",
+    "    m5.to_parquet(DATA_PATH + f\"processed/m5/{file}\", engine=\"fastparquet\", row_group_offsets=25000)\n",
+    "    #m5.to_parquet(DATA_PATH + f\"processed/m5/{file}\", engine=\"pyarrow\", compression = 'brotli', row_group_size = 25000)\n",
     "\n",
     "    # For the daily, we only consider a bar untradeable if it has zero trade prices. So if all \"tradeable\" is False. Also we only consider regular trading hours.\n",
     "    bars = remove_extended_hours(bars)\n",
     "    d1 = bars.resample('D').agg({'open': 'first', \n",
-    "                                    'high': 'max', \n",
-    "                                    'low': 'min',\n",
-    "                                    'close': 'last',\n",
-    "                                    'volume': 'sum',\n",
-    "                                    'tradeable': 'max',\n",
-    "                                    'halted': 'min'})\n",
+    "                                 'high': 'max', \n",
+    "                                 'low': 'min',\n",
+    "                                 'close': 'last',\n",
+    "                                 'volume': 'sum',\n",
+    "                                 'tradeable': 'max',\n",
+    "                                 'halted': 'min'})\n",
     "    d1 = d1.dropna()\n",
     "    d1['tradeable'] = d1['tradeable'].astype('bool')\n",
     "    d1['halted'] = d1['halted'].astype('bool')   \n",
-    "    d1.to_parquet(DATA_PATH + f\"processed/d1/{file}\", engine=\"pyarrow\", compression = 'brotli')"
+    "    d1.to_parquet(DATA_PATH + f\"processed/d1/{file}\", engine=\"fastparquet\", row_group_offsets=25000)\n",
+    "    #d1.to_parquet(DATA_PATH + f\"processed/d1/{file}\", engine=\"pyarrow\", compression = 'brotli', row_group_size = 25000)"
    ]
   },
   {
